--- a/Code/Randomised checks.ipynb
+++ b/Code/Randomised checks.ipynb
@@ -45,7 +45,8 @@
    "outputs": [],
    "source": [
     "col_names = data.columns\n",
-    "x_cols = ['P_VSA_MR_5', 'Mor04m', 'E1p', 'Mor22s', 'LUMO / eV']\n",
+    "#x_cols = ['P_VSA_MR_5', 'Mor04m', 'E1p', 'Mor22s', 'LUMO / eV']\n",
+    "x_cols = ['VE2_G/D', 'Eig14_EA(dm)', 'Mor31m', 'TDB04u', 'HATS1e']\n",
     "X_full = data[col_names[3:]]\n",
     "y = data[col_names[2]]"
    ]
@@ -77,12 +78,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = keras.models.Sequential([\n",
-    "    keras.layers.Dense(50, activation='relu', input_shape=(len(x_cols),)),\n",
-    "    keras.layers.Dense(20, activation='relu'),\n",
-    "    keras.layers.Dense(10, activation='relu'),\n",
-    "    keras.layers.Dense(1)\n",
-    "])"
+    "def get_model():\n",
+    "    model = keras.models.Sequential([\n",
+    "        keras.layers.Dense(50, activation='relu', input_shape=(len(x_cols),)),\n",
+    "        keras.layers.Dense(20, activation='relu'),\n",
+    "        keras.layers.Dense(10, activation='relu'),\n",
+    "        keras.layers.Dense(1)\n",
+    "        ])\n",
+    "    model.compile(\n",
+    "        optimizer=tf.optimizers.Adam(learning_rate=0.01),\n",
+    "        loss='mean_squared_error')\n",
+    "    return model"
    ]
   },
   {
@@ -92,9 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(\n",
-    "    optimizer=tf.optimizers.Adam(learning_rate=0.01),\n",
-    "    loss='mean_squared_error')"
+    "model = get_model()"
    ]
   },
   {
@@ -126,7 +130,7 @@
     {
      "data": {
       "text/plain": [
-       "[370, 657, 791, 758, 1258]"
+       "[534, 460, 682, 538, 850]"
       ]
      },
      "execution_count": 11,
@@ -148,7 +152,7 @@
    "source": [
     "X_train_sel = X_train[:, x_col_idxs]\n",
     "X_val_sel = X_valid[:, x_col_idxs]\n",
-    "history = model.fit(X_train_sel, y_train, validation_data=(X_val_sel, y_valid), verbose=0, epochs=100)\n",
+    "history = model.fit(X_train_sel, y_train, validation_data=(X_val_sel, y_valid), verbose=0, epochs=25)\n",
     "results.append({'idxs': x_col_idxs, 'loss': history.history['loss'][-1], 'val loss': history.history['val_loss'][-1]})"
    ]
   },
@@ -160,11 +164,12 @@
    "outputs": [],
    "source": [
     "for _ in range(25):\n",
+    "    model = get_model()\n",
     "    model.set_weights(weights)\n",
     "    idxs = rng.choice(len(col_names)-3, size=len(x_cols), replace=False)\n",
     "    X_train_sel = X_train[:, idxs]\n",
     "    X_val_sel = X_valid[:, idxs]\n",
-    "    history = model.fit(X_train_sel, y_train, validation_data=(X_val_sel, y_valid), verbose=0, epochs=100)\n",
+    "    history = model.fit(X_train_sel, y_train, validation_data=(X_val_sel, y_valid), verbose=0, epochs=25)\n",
     "    results.append({'idxs': idxs, 'loss': history.history['loss'][-1], 'val loss': history.history['val_loss'][-1]})"
    ]
   },
@@ -177,84 +182,84 @@
     {
      "data": {
       "text/plain": [
-       "[{'idxs': [370, 657, 791, 758, 1258],\n",
-       "  'loss': 0.0407479964196682,\n",
-       "  'val loss': 0.03569430485367775},\n",
+       "[{'idxs': [534, 460, 682, 538, 850],\n",
+       "  'loss': 0.060117561370134354,\n",
+       "  'val loss': 0.0277117732912302},\n",
        " {'idxs': array([972, 552, 823, 112, 545], dtype=int64),\n",
-       "  'loss': 0.052331890910863876,\n",
-       "  'val loss': 0.014153177849948406},\n",
+       "  'loss': 0.05426488071680069,\n",
+       "  'val loss': 0.018380610272288322},\n",
        " {'idxs': array([1227,  118,  661,  959,  926], dtype=int64),\n",
-       "  'loss': 0.05302339047193527,\n",
-       "  'val loss': 0.03510885313153267},\n",
+       "  'loss': 0.05677643418312073,\n",
+       "  'val loss': 0.040437936782836914},\n",
        " {'idxs': array([ 629, 1054,  566,  466,  230], dtype=int64),\n",
-       "  'loss': 0.043198052793741226,\n",
-       "  'val loss': 0.02604661136865616},\n",
+       "  'loss': 0.052160825580358505,\n",
+       "  'val loss': 0.027218176051974297},\n",
        " {'idxs': array([ 685,  286,  567,  557, 1033], dtype=int64),\n",
-       "  'loss': 0.04422992095351219,\n",
-       "  'val loss': 0.01709439419209957},\n",
+       "  'loss': 0.051707673817873,\n",
+       "  'val loss': 0.02054666168987751},\n",
        " {'idxs': array([ 208, 1078, 1040,  348,  795], dtype=int64),\n",
-       "  'loss': 0.047220077365636826,\n",
-       "  'val loss': 0.03763711452484131},\n",
+       "  'loss': 0.05945942550897598,\n",
+       "  'val loss': 0.03363513574004173},\n",
        " {'idxs': array([1123,  980,  560, 1219,  853], dtype=int64),\n",
-       "  'loss': 0.05452549457550049,\n",
-       "  'val loss': 0.023836536332964897},\n",
+       "  'loss': 0.0623667873442173,\n",
+       "  'val loss': 0.031627316027879715},\n",
        " {'idxs': array([ 55, 625, 687, 936, 194], dtype=int64),\n",
-       "  'loss': 0.0319579653441906,\n",
-       "  'val loss': 0.03812388703227043},\n",
+       "  'loss': 0.0488118939101696,\n",
+       "  'val loss': 0.03139013424515724},\n",
        " {'idxs': array([1140,  466,  409,  516, 1215], dtype=int64),\n",
-       "  'loss': 0.0412449836730957,\n",
-       "  'val loss': 0.008724517188966274},\n",
+       "  'loss': 0.048549942672252655,\n",
+       "  'val loss': 0.007308709900826216},\n",
        " {'idxs': array([581, 416, 598, 863, 163], dtype=int64),\n",
-       "  'loss': 0.03831624984741211,\n",
-       "  'val loss': 0.02567535825073719},\n",
+       "  'loss': 0.056813422590494156,\n",
+       "  'val loss': 0.04534071311354637},\n",
        " {'idxs': array([ 882,  792, 1047,  201,  549], dtype=int64),\n",
-       "  'loss': 0.03147454559803009,\n",
-       "  'val loss': 0.022747276350855827},\n",
+       "  'loss': 0.04878067970275879,\n",
+       "  'val loss': 0.016792016103863716},\n",
        " {'idxs': array([ 487, 1131, 1058,  546, 1011], dtype=int64),\n",
-       "  'loss': 0.047579601407051086,\n",
-       "  'val loss': 0.00967223197221756},\n",
+       "  'loss': 0.053943876177072525,\n",
+       "  'val loss': 0.012577741406857967},\n",
        " {'idxs': array([ 175, 1046,  251,    9, 1013], dtype=int64),\n",
-       "  'loss': 0.03650321811437607,\n",
-       "  'val loss': 0.03772147372364998},\n",
+       "  'loss': 0.05371477082371712,\n",
+       "  'val loss': 0.024170612916350365},\n",
        " {'idxs': array([982, 592, 886, 700, 348], dtype=int64),\n",
-       "  'loss': 0.05157969519495964,\n",
-       "  'val loss': 0.06193133816123009},\n",
+       "  'loss': 0.05961842089891434,\n",
+       "  'val loss': 0.02622690051794052},\n",
        " {'idxs': array([175, 842, 144, 308, 553], dtype=int64),\n",
-       "  'loss': 0.050586577504873276,\n",
-       "  'val loss': 0.004453748464584351},\n",
+       "  'loss': 0.05722425878047943,\n",
+       "  'val loss': 0.007840313948690891},\n",
        " {'idxs': array([799, 712, 961,  99, 722], dtype=int64),\n",
-       "  'loss': 0.048638228327035904,\n",
-       "  'val loss': 0.0211504977196455},\n",
+       "  'loss': 0.06518583744764328,\n",
+       "  'val loss': 0.04283299669623375},\n",
        " {'idxs': array([757,  38, 437, 381, 550], dtype=int64),\n",
-       "  'loss': 0.035046108067035675,\n",
-       "  'val loss': 0.03123084455728531},\n",
+       "  'loss': 0.045181773602962494,\n",
+       "  'val loss': 0.03537534177303314},\n",
        " {'idxs': array([  43, 1072, 1035,  294, 1246], dtype=int64),\n",
-       "  'loss': 0.03299005329608917,\n",
-       "  'val loss': 0.01709398441016674},\n",
+       "  'loss': 0.05248492583632469,\n",
+       "  'val loss': 0.022664234042167664},\n",
        " {'idxs': array([368, 545, 701, 158, 832], dtype=int64),\n",
-       "  'loss': 0.05014319717884064,\n",
-       "  'val loss': 0.028501778841018677},\n",
+       "  'loss': 0.054346490651369095,\n",
+       "  'val loss': 0.03884335607290268},\n",
        " {'idxs': array([1024,  525,  404,  510,  513], dtype=int64),\n",
-       "  'loss': 0.04178829491138458,\n",
-       "  'val loss': 0.010388446971774101},\n",
+       "  'loss': 0.06492287665605545,\n",
+       "  'val loss': 0.031837183982133865},\n",
        " {'idxs': array([581, 969, 908, 113, 877], dtype=int64),\n",
-       "  'loss': 0.05515079200267792,\n",
-       "  'val loss': 0.02417341060936451},\n",
+       "  'loss': 0.05990135669708252,\n",
+       "  'val loss': 0.02543029375374317},\n",
        " {'idxs': array([ 624,  876,  191, 1178,  625], dtype=int64),\n",
-       "  'loss': 0.042733367532491684,\n",
-       "  'val loss': 0.061534177511930466},\n",
+       "  'loss': 0.054000258445739746,\n",
+       "  'val loss': 0.03391077741980553},\n",
        " {'idxs': array([792, 764, 859, 378, 455], dtype=int64),\n",
-       "  'loss': 0.04385894164443016,\n",
-       "  'val loss': 0.03990562632679939},\n",
+       "  'loss': 0.05051316320896149,\n",
+       "  'val loss': 0.04692922532558441},\n",
        " {'idxs': array([ 460,  623,  425, 1209, 1143], dtype=int64),\n",
-       "  'loss': 0.03868145868182182,\n",
-       "  'val loss': 0.1063578650355339},\n",
+       "  'loss': 0.05625397339463234,\n",
+       "  'val loss': 0.05191443860530853},\n",
        " {'idxs': array([ 903, 1217,  979,  331,  328], dtype=int64),\n",
-       "  'loss': 0.05534837767481804,\n",
-       "  'val loss': 0.029232537373900414},\n",
+       "  'loss': 0.06242649629712105,\n",
+       "  'val loss': 0.02238452434539795},\n",
        " {'idxs': array([1136,  121,   99,  160,  562], dtype=int64),\n",
-       "  'loss': 0.051883500069379807,\n",
-       "  'val loss': 0.050858233124017715}]"
+       "  'loss': 0.05736134946346283,\n",
+       "  'val loss': 0.0619671493768692}]"
       ]
      },
      "execution_count": 14,
@@ -295,8 +300,158 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "inclusive-painting",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_losses = [r['val loss'] for r in results]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "burning-prospect",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_losses = sorted(val_losses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "overhead-technician",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_losses.index(results[0]['val loss'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "aerial-serum",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(val_losses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "overhead-oxygen",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.007308709900826216,\n",
+       " 0.007840313948690891,\n",
+       " 0.012577741406857967,\n",
+       " 0.016792016103863716,\n",
+       " 0.018380610272288322,\n",
+       " 0.02054666168987751,\n",
+       " 0.02238452434539795,\n",
+       " 0.022664234042167664,\n",
+       " 0.024170612916350365,\n",
+       " 0.02543029375374317,\n",
+       " 0.02622690051794052,\n",
+       " 0.027218176051974297,\n",
+       " 0.0277117732912302,\n",
+       " 0.03139013424515724,\n",
+       " 0.031627316027879715,\n",
+       " 0.031837183982133865,\n",
+       " 0.03363513574004173,\n",
+       " 0.03391077741980553,\n",
+       " 0.03537534177303314,\n",
+       " 0.03884335607290268,\n",
+       " 0.040437936782836914,\n",
+       " 0.04283299669623375,\n",
+       " 0.04534071311354637,\n",
+       " 0.04692922532558441,\n",
+       " 0.05191443860530853,\n",
+       " 0.0619671493768692]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_losses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "enabling-holmes",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.030203625900097765"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(val_losses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "developed-specialist",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0277117732912302"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results[0]['val loss']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "endangered-adjustment",
+   "id": "south-postage",
    "metadata": {},
    "outputs": [],
    "source": []
