--- a/Code/DL Model based on statistics.ipynb
+++ b/Code/DL Model based on statistics.ipynb
@@ -44,7 +44,10 @@
    "outputs": [],
    "source": [
     "col_names = data.columns\n",
-    "x_cols = ['P_VSA_MR_5', 'Mor04m', 'E1p', 'Mor22s', 'LUMO / eV']\n",
+    "#x_cols = ['P_VSA_MR_5', 'Mor04m', 'LUMO / eV']\n",
+    "#x_cols = ['P_VSA_MR_5', 'Mor04m', 'E1p', 'Mor22s', 'LUMO / eV']\n",
+    "#x_cols=['VE2_G/D', 'Eig14_EA(dm)', 'Mor31m', 'TDB04u', 'HATS1e']\n",
+    "x_cols=['VE2_G/D', 'Eig14_EA(dm)', 'Mor31m']\n",
     "X = data[x_cols]\n",
     "y = data[col_names[2]]"
    ]
@@ -98,7 +101,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense (Dense)                (None, 50)                300       \n",
+      "dense (Dense)                (None, 50)                200       \n",
       "_________________________________________________________________\n",
       "dense_1 (Dense)              (None, 20)                1020      \n",
       "_________________________________________________________________\n",
@@ -106,8 +109,8 @@
       "_________________________________________________________________\n",
       "dense_3 (Dense)              (None, 1)                 11        \n",
       "=================================================================\n",
-      "Total params: 1,541\n",
-      "Trainable params: 1,541\n",
+      "Total params: 1,441\n",
+      "Trainable params: 1,441\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -140,55 +143,55 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/25\n",
-      "2/2 [==============================] - 0s 40ms/step - loss: 0.4029 - val_loss: 0.2034\n",
+      "2/2 [==============================] - 0s 39ms/step - loss: 0.4239 - val_loss: 0.3074\n",
       "Epoch 2/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.1603 - val_loss: 0.0512\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.1998 - val_loss: 0.1279\n",
       "Epoch 3/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.1270 - val_loss: 0.0511\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.0753 - val_loss: 0.1300\n",
       "Epoch 4/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.1376 - val_loss: 0.0351\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.1262 - val_loss: 0.1325\n",
       "Epoch 5/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0884 - val_loss: 0.0433\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.1128 - val_loss: 0.0981\n",
       "Epoch 6/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0814 - val_loss: 0.0673\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0710 - val_loss: 0.1011\n",
       "Epoch 7/25\n",
-      "2/2 [==============================] - 0s 7ms/step - loss: 0.0904 - val_loss: 0.0669\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0684 - val_loss: 0.1193\n",
       "Epoch 8/25\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.0883 - val_loss: 0.0460\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0853 - val_loss: 0.1260\n",
       "Epoch 9/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0731 - val_loss: 0.0253\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0888 - val_loss: 0.1127\n",
       "Epoch 10/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0638 - val_loss: 0.0175\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0775 - val_loss: 0.0902\n",
       "Epoch 11/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0662 - val_loss: 0.0179\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0653 - val_loss: 0.0765\n",
       "Epoch 12/25\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.0673 - val_loss: 0.0144\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0639 - val_loss: 0.0769\n",
       "Epoch 13/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0607 - val_loss: 0.0116\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0713 - val_loss: 0.0751\n",
       "Epoch 14/25\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.0564 - val_loss: 0.0137\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0700 - val_loss: 0.0719\n",
       "Epoch 15/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0528 - val_loss: 0.0113\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.0630 - val_loss: 0.0724\n",
       "Epoch 16/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0485 - val_loss: 0.0093\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0630 - val_loss: 0.0738\n",
       "Epoch 17/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0459 - val_loss: 0.0120\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0636 - val_loss: 0.0713\n",
       "Epoch 18/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0451 - val_loss: 0.0121\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0632 - val_loss: 0.0660\n",
       "Epoch 19/25\n",
-      "2/2 [==============================] - 0s 7ms/step - loss: 0.0424 - val_loss: 0.0115\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0622 - val_loss: 0.0609\n",
       "Epoch 20/25\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.0396 - val_loss: 0.0116\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0613 - val_loss: 0.0604\n",
       "Epoch 21/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0406 - val_loss: 0.0128\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0616 - val_loss: 0.0575\n",
       "Epoch 22/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0396 - val_loss: 0.0148\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0609 - val_loss: 0.0566\n",
       "Epoch 23/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0372 - val_loss: 0.0199\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0606 - val_loss: 0.0573\n",
       "Epoch 24/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0380 - val_loss: 0.0224\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0609 - val_loss: 0.0575\n",
       "Epoch 25/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0370 - val_loss: 0.0174\n"
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0609 - val_loss: 0.0576\n"
      ]
     }
    ],
@@ -209,31 +212,84 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "adjacent-filing",
+   "id": "damaged-inflation",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "true: 0.328, predicted: 0.471484512090683\n",
-      "true: 0.896, predicted: 0.808195948600769\n",
-      "true: 0.817, predicted: 0.9395850896835327\n",
-      "true: 0.765, predicted: 0.7283148169517517\n",
-      "true: 0.893, predicted: 1.1366854906082153\n",
-      "true: 0.733, predicted: 0.7463375329971313\n"
+      "true: 0.328, predicted: 0.730\n",
+      "true: 0.896, predicted: 0.638\n",
+      "true: 0.817, predicted: 0.728\n",
+      "true: 0.765, predicted: 0.639\n",
+      "true: 0.893, predicted: 0.607\n",
+      "true: 0.733, predicted: 0.623\n"
      ]
     }
    ],
    "source": [
     "for i in range(y_pred.shape[0]):\n",
-    "    print('true: {}, predicted: {}'.format(y_valid.iloc[i], y_pred[i, 0]))"
+    "    print('true: {}, predicted: {:.3f}'.format(y_valid.iloc[i], y_pred[i, 0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "choice-catalog",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     0.328\n",
+       "5     0.896\n",
+       "36    0.817\n",
+       "45    0.765\n",
+       "13    0.893\n",
+       "54    0.733\n",
+       "Name: LinIE ZE41, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_valid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "egyptian-coalition",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.7302396 ],\n",
+       "       [0.63835657],\n",
+       "       [0.7284132 ],\n",
+       "       [0.6388422 ],\n",
+       "       [0.6073277 ],\n",
+       "       [0.62320495]], dtype=float32)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "numerical-leadership",
+   "id": "orange-guard",
    "metadata": {},
    "outputs": [],
    "source": []
