--- a/Code/Full Model.ipynb
+++ b/Code/Full Model.ipynb
@@ -129,161 +129,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/75\n",
-      "2/2 [==============================] - 0s 45ms/step - loss: 5.8340 - val_loss: 0.0376\n",
-      "Epoch 2/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.1942 - val_loss: 0.2854\n",
-      "Epoch 3/75\n",
+      "Epoch 1/25\n",
+      "2/2 [==============================] - 0s 39ms/step - loss: 5.8340 - val_loss: 0.0376\n",
+      "Epoch 2/25\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.1942 - val_loss: 0.2854\n",
+      "Epoch 3/25\n",
       "2/2 [==============================] - 0s 0s/step - loss: 0.1909 - val_loss: 0.0606\n",
-      "Epoch 4/75\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.1459 - val_loss: 0.0874\n",
-      "Epoch 5/75\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.0997 - val_loss: 0.0682\n",
-      "Epoch 6/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.1033 - val_loss: 0.1147\n",
-      "Epoch 7/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.1008 - val_loss: 0.0312\n",
-      "Epoch 8/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0760 - val_loss: 0.0606\n",
-      "Epoch 9/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0746 - val_loss: 0.0349\n",
-      "Epoch 10/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0670 - val_loss: 0.0520\n",
-      "Epoch 11/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0568 - val_loss: 0.0334\n",
-      "Epoch 12/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0519 - val_loss: 0.0418\n",
-      "Epoch 13/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0502 - val_loss: 0.0279\n",
-      "Epoch 14/75\n",
+      "Epoch 4/25\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.1459 - val_loss: 0.0874\n",
+      "Epoch 5/25\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0997 - val_loss: 0.0682\n",
+      "Epoch 6/25\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.1033 - val_loss: 0.1147\n",
+      "Epoch 7/25\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.1008 - val_loss: 0.0312\n",
+      "Epoch 8/25\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0760 - val_loss: 0.0606\n",
+      "Epoch 9/25\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0746 - val_loss: 0.0349\n",
+      "Epoch 10/25\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0670 - val_loss: 0.0520\n",
+      "Epoch 11/25\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0568 - val_loss: 0.0334\n",
+      "Epoch 12/25\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0519 - val_loss: 0.0418\n",
+      "Epoch 13/25\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0502 - val_loss: 0.0279\n",
+      "Epoch 14/25\n",
       "2/2 [==============================] - 0s 0s/step - loss: 0.0497 - val_loss: 0.0292\n",
-      "Epoch 15/75\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0399 - val_loss: 0.0381\n",
-      "Epoch 16/75\n",
-      "2/2 [==============================] - 0s 7ms/step - loss: 0.0427 - val_loss: 0.0287\n",
-      "Epoch 17/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0336 - val_loss: 0.0254\n",
-      "Epoch 18/75\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.0380 - val_loss: 0.0226\n",
-      "Epoch 19/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0349 - val_loss: 0.0343\n",
-      "Epoch 20/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0329 - val_loss: 0.0213\n",
-      "Epoch 21/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0318 - val_loss: 0.0217\n",
-      "Epoch 22/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0295 - val_loss: 0.0297\n",
-      "Epoch 23/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0299 - val_loss: 0.0245\n",
-      "Epoch 24/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0256 - val_loss: 0.0189\n",
-      "Epoch 25/75\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0292 - val_loss: 0.0185\n",
-      "Epoch 26/75\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0224 - val_loss: 0.0333\n",
-      "Epoch 27/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0284 - val_loss: 0.0183\n",
-      "Epoch 28/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0235 - val_loss: 0.0181\n",
-      "Epoch 29/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0235 - val_loss: 0.0243\n",
-      "Epoch 30/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0222 - val_loss: 0.0180\n",
-      "Epoch 31/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0196 - val_loss: 0.0175\n",
-      "Epoch 32/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0195 - val_loss: 0.0224\n",
-      "Epoch 33/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0211 - val_loss: 0.0200\n",
-      "Epoch 34/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0173 - val_loss: 0.0199\n",
-      "Epoch 35/75\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.0202 - val_loss: 0.0229\n",
-      "Epoch 36/75\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0175 - val_loss: 0.0196\n",
-      "Epoch 37/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0201 - val_loss: 0.0200\n",
-      "Epoch 38/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0164 - val_loss: 0.0311\n",
-      "Epoch 39/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0198 - val_loss: 0.0206\n",
-      "Epoch 40/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0153 - val_loss: 0.0231\n",
-      "Epoch 41/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0127 - val_loss: 0.0219\n",
-      "Epoch 42/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0122 - val_loss: 0.0218\n",
-      "Epoch 43/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0126 - val_loss: 0.0249\n",
-      "Epoch 44/75\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0130 - val_loss: 0.0248\n",
-      "Epoch 45/75\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0128 - val_loss: 0.0230\n",
-      "Epoch 46/75\n",
-      "2/2 [==============================] - 0s 7ms/step - loss: 0.0108 - val_loss: 0.0334\n",
-      "Epoch 47/75\n",
-      "2/2 [==============================] - 0s 2ms/step - loss: 0.0135 - val_loss: 0.0232\n",
-      "Epoch 48/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0094 - val_loss: 0.0258\n",
-      "Epoch 49/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0087 - val_loss: 0.0236\n",
-      "Epoch 50/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0087 - val_loss: 0.0253\n",
-      "Epoch 51/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0080 - val_loss: 0.0263\n",
-      "Epoch 52/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0074 - val_loss: 0.0241\n",
-      "Epoch 53/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0077 - val_loss: 0.0275\n",
-      "Epoch 54/75\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0070 - val_loss: 0.0269\n",
-      "Epoch 55/75\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0066 - val_loss: 0.0265\n",
-      "Epoch 56/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0064 - val_loss: 0.0280\n",
-      "Epoch 57/75\n",
-      "2/2 [==============================] - 0s 7ms/step - loss: 0.0060 - val_loss: 0.0271\n",
-      "Epoch 58/75\n",
-      "2/2 [==============================] - 0s 2ms/step - loss: 0.0058 - val_loss: 0.0273\n",
-      "Epoch 59/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0056 - val_loss: 0.0279\n",
-      "Epoch 60/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0053 - val_loss: 0.0276\n",
-      "Epoch 61/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0053 - val_loss: 0.0284\n",
-      "Epoch 62/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0051 - val_loss: 0.0268\n",
-      "Epoch 63/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0058 - val_loss: 0.0299\n",
-      "Epoch 64/75\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0052 - val_loss: 0.0277\n",
-      "Epoch 65/75\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0057 - val_loss: 0.0286\n",
-      "Epoch 66/75\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0053 - val_loss: 0.0260\n",
-      "Epoch 67/75\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.0045 - val_loss: 0.0261\n",
-      "Epoch 68/75\n",
-      "2/2 [==============================] - 0s 7ms/step - loss: 0.0044 - val_loss: 0.0282\n",
-      "Epoch 69/75\n",
-      "2/2 [==============================] - 0s 2ms/step - loss: 0.0038 - val_loss: 0.0259\n",
-      "Epoch 70/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0047 - val_loss: 0.0283\n",
-      "Epoch 71/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0049 - val_loss: 0.0274\n",
-      "Epoch 72/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0035 - val_loss: 0.0280\n",
-      "Epoch 73/75\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0033 - val_loss: 0.0264\n",
-      "Epoch 74/75\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0043 - val_loss: 0.0299\n",
-      "Epoch 75/75\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0037 - val_loss: 0.0262\n"
+      "Epoch 15/25\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0399 - val_loss: 0.0381\n",
+      "Epoch 16/25\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0427 - val_loss: 0.0287\n",
+      "Epoch 17/25\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0336 - val_loss: 0.0254\n",
+      "Epoch 18/25\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0380 - val_loss: 0.0226\n",
+      "Epoch 19/25\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0349 - val_loss: 0.0343\n",
+      "Epoch 20/25\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0329 - val_loss: 0.0213\n",
+      "Epoch 21/25\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0318 - val_loss: 0.0217\n",
+      "Epoch 22/25\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0295 - val_loss: 0.0297\n",
+      "Epoch 23/25\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0299 - val_loss: 0.0245\n",
+      "Epoch 24/25\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0256 - val_loss: 0.0189\n",
+      "Epoch 25/25\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.0292 - val_loss: 0.0185\n"
      ]
     }
    ],
    "source": [
-    "history = model.fit(X_train, y_train, validation_data=(X_valid, y_valid), epochs=75)"
+    "history = model.fit(X_train, y_train, validation_data=(X_valid, y_valid), epochs=25)"
    ]
   },
   {
@@ -315,8 +215,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "fifteen-interim",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true: 0.328, predicted: 0.623\n",
+      "true: 0.896, predicted: 0.772\n",
+      "true: 0.817, predicted: 0.807\n",
+      "true: 0.765, predicted: 0.696\n",
+      "true: 0.893, predicted: 0.957\n",
+      "true: 0.733, predicted: 0.726\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = model.predict(X_valid)\n",
+    "for i in range(y_pred.shape[0]):\n",
+    "    print('true: {}, predicted: {:.3f}'.format(y_valid.iloc[i], y_pred[i, 0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "spatial-sewing",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.62264574],\n",
+       "       [0.7720585 ],\n",
+       "       [0.8069314 ],\n",
+       "       [0.6956795 ],\n",
+       "       [0.9567511 ],\n",
+       "       [0.7264972 ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "first-partner",
+   "id": "acquired-sharp",
    "metadata": {},
    "outputs": [],
    "source": []
