--- a/Code/Data inspection.ipynb
+++ b/Code/Data inspection.ipynb
@@ -14,7 +14,7 @@
     "from sklearn.feature_selection import SelectFromModel\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import matplotlib.pyplot as plt\n",
-    "from eli5.sklearn import PermutationImportance"
+    "#from eli5.sklearn import PermutationImportance"
    ]
   },
   {
@@ -680,7 +680,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "D:\\Programme\\Anaconda3\\envs\\py37\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "C:\\Program Files\\Anaconda\\envs\\py37\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "ideal-festival",
    "metadata": {},
    "outputs": [
@@ -911,7 +911,7 @@
        "Int64Index([0, 5, 36, 45, 13, 54], dtype='int64')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "id": "brown-traveler",
    "metadata": {},
    "outputs": [
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "incident-knitting",
    "metadata": {},
    "outputs": [],
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "id": "physical-paintball",
    "metadata": {},
    "outputs": [],
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "id": "undefined-thousand",
    "metadata": {},
    "outputs": [
@@ -987,7 +987,7 @@
        " -12.51355215000001]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "id": "amateur-nancy",
    "metadata": {},
    "outputs": [
@@ -1014,7 +1014,7 @@
        " 1.0420153499999856]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "id": "discrete-voluntary",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1047,7 @@
        " -19.35846600000002]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "id": "lyric-personal",
    "metadata": {},
    "outputs": [
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 32,
    "id": "southwest-absolute",
    "metadata": {},
    "outputs": [
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "id": "wooden-remedy",
    "metadata": {},
    "outputs": [
@@ -1123,7 +1123,7 @@
        "['44.34', '-40.33', '-16.44', '-5.27', '-43.58', '-41.70']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "id": "interpreted-luther",
    "metadata": {},
    "outputs": [
@@ -1152,7 +1152,7 @@
        "['-18.07', '-49.77', '-60.47', '-18.70', '-49.60', '-54.99']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
