--- a/Code/Randomised checks.ipynb
+++ b/Code/Randomised checks.ipynb
@@ -45,8 +45,8 @@
    "outputs": [],
    "source": [
     "col_names = data.columns\n",
-    "#x_cols = ['P_VSA_MR_5', 'Mor04m', 'E1p', 'Mor22s', 'LUMO / eV']\n",
-    "x_cols = ['VE2_G/D', 'Eig14_EA(dm)', 'Mor31m', 'TDB04u', 'HATS1e']\n",
+    "x_cols = ['P_VSA_MR_5', 'Mor04m', 'E1p', 'Mor22s', 'LUMO / eV']\n",
+    "#x_cols = ['VE2_G/D', 'Eig14_EA(dm)', 'Mor31m', 'TDB04u', 'HATS1e']\n",
     "X_full = data[col_names[3:]]\n",
     "y = data[col_names[2]]"
    ]
@@ -130,7 +130,7 @@
     {
      "data": {
       "text/plain": [
-       "[534, 460, 682, 538, 850]"
+       "[370, 657, 791, 758, 1258]"
       ]
      },
      "execution_count": 11,
@@ -161,9 +161,28 @@
    "execution_count": 13,
    "id": "empty-monroe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n",
+      "40\n",
+      "50\n",
+      "60\n",
+      "70\n",
+      "80\n",
+      "90\n",
+      "100\n"
+     ]
+    }
+   ],
    "source": [
-    "for _ in range(25):\n",
+    "for i in range(100):\n",
+    "    if i%10 == 9:\n",
+    "        print(i+1)\n",
     "    model = get_model()\n",
     "    model.set_weights(weights)\n",
     "    idxs = rng.choice(len(col_names)-3, size=len(x_cols), replace=False)\n",
@@ -178,97 +197,9 @@
    "execution_count": 14,
    "id": "clean-williams",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'idxs': [534, 460, 682, 538, 850],\n",
-       "  'loss': 0.060117561370134354,\n",
-       "  'val loss': 0.0277117732912302},\n",
-       " {'idxs': array([972, 552, 823, 112, 545], dtype=int64),\n",
-       "  'loss': 0.05426488071680069,\n",
-       "  'val loss': 0.018380610272288322},\n",
-       " {'idxs': array([1227,  118,  661,  959,  926], dtype=int64),\n",
-       "  'loss': 0.05677643418312073,\n",
-       "  'val loss': 0.040437936782836914},\n",
-       " {'idxs': array([ 629, 1054,  566,  466,  230], dtype=int64),\n",
-       "  'loss': 0.052160825580358505,\n",
-       "  'val loss': 0.027218176051974297},\n",
-       " {'idxs': array([ 685,  286,  567,  557, 1033], dtype=int64),\n",
-       "  'loss': 0.051707673817873,\n",
-       "  'val loss': 0.02054666168987751},\n",
-       " {'idxs': array([ 208, 1078, 1040,  348,  795], dtype=int64),\n",
-       "  'loss': 0.05945942550897598,\n",
-       "  'val loss': 0.03363513574004173},\n",
-       " {'idxs': array([1123,  980,  560, 1219,  853], dtype=int64),\n",
-       "  'loss': 0.0623667873442173,\n",
-       "  'val loss': 0.031627316027879715},\n",
-       " {'idxs': array([ 55, 625, 687, 936, 194], dtype=int64),\n",
-       "  'loss': 0.0488118939101696,\n",
-       "  'val loss': 0.03139013424515724},\n",
-       " {'idxs': array([1140,  466,  409,  516, 1215], dtype=int64),\n",
-       "  'loss': 0.048549942672252655,\n",
-       "  'val loss': 0.007308709900826216},\n",
-       " {'idxs': array([581, 416, 598, 863, 163], dtype=int64),\n",
-       "  'loss': 0.056813422590494156,\n",
-       "  'val loss': 0.04534071311354637},\n",
-       " {'idxs': array([ 882,  792, 1047,  201,  549], dtype=int64),\n",
-       "  'loss': 0.04878067970275879,\n",
-       "  'val loss': 0.016792016103863716},\n",
-       " {'idxs': array([ 487, 1131, 1058,  546, 1011], dtype=int64),\n",
-       "  'loss': 0.053943876177072525,\n",
-       "  'val loss': 0.012577741406857967},\n",
-       " {'idxs': array([ 175, 1046,  251,    9, 1013], dtype=int64),\n",
-       "  'loss': 0.05371477082371712,\n",
-       "  'val loss': 0.024170612916350365},\n",
-       " {'idxs': array([982, 592, 886, 700, 348], dtype=int64),\n",
-       "  'loss': 0.05961842089891434,\n",
-       "  'val loss': 0.02622690051794052},\n",
-       " {'idxs': array([175, 842, 144, 308, 553], dtype=int64),\n",
-       "  'loss': 0.05722425878047943,\n",
-       "  'val loss': 0.007840313948690891},\n",
-       " {'idxs': array([799, 712, 961,  99, 722], dtype=int64),\n",
-       "  'loss': 0.06518583744764328,\n",
-       "  'val loss': 0.04283299669623375},\n",
-       " {'idxs': array([757,  38, 437, 381, 550], dtype=int64),\n",
-       "  'loss': 0.045181773602962494,\n",
-       "  'val loss': 0.03537534177303314},\n",
-       " {'idxs': array([  43, 1072, 1035,  294, 1246], dtype=int64),\n",
-       "  'loss': 0.05248492583632469,\n",
-       "  'val loss': 0.022664234042167664},\n",
-       " {'idxs': array([368, 545, 701, 158, 832], dtype=int64),\n",
-       "  'loss': 0.054346490651369095,\n",
-       "  'val loss': 0.03884335607290268},\n",
-       " {'idxs': array([1024,  525,  404,  510,  513], dtype=int64),\n",
-       "  'loss': 0.06492287665605545,\n",
-       "  'val loss': 0.031837183982133865},\n",
-       " {'idxs': array([581, 969, 908, 113, 877], dtype=int64),\n",
-       "  'loss': 0.05990135669708252,\n",
-       "  'val loss': 0.02543029375374317},\n",
-       " {'idxs': array([ 624,  876,  191, 1178,  625], dtype=int64),\n",
-       "  'loss': 0.054000258445739746,\n",
-       "  'val loss': 0.03391077741980553},\n",
-       " {'idxs': array([792, 764, 859, 378, 455], dtype=int64),\n",
-       "  'loss': 0.05051316320896149,\n",
-       "  'val loss': 0.04692922532558441},\n",
-       " {'idxs': array([ 460,  623,  425, 1209, 1143], dtype=int64),\n",
-       "  'loss': 0.05625397339463234,\n",
-       "  'val loss': 0.05191443860530853},\n",
-       " {'idxs': array([ 903, 1217,  979,  331,  328], dtype=int64),\n",
-       "  'loss': 0.06242649629712105,\n",
-       "  'val loss': 0.02238452434539795},\n",
-       " {'idxs': array([1136,  121,   99,  160,  562], dtype=int64),\n",
-       "  'loss': 0.05736134946346283,\n",
-       "  'val loss': 0.0619671493768692}]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "results"
+    "#results"
    ]
   },
   {
@@ -327,7 +258,7 @@
     {
      "data": {
       "text/plain": [
-       "12"
+       "62"
       ]
      },
      "execution_count": 18,
@@ -348,7 +279,7 @@
     {
      "data": {
       "text/plain": [
-       "26"
+       "101"
       ]
      },
      "execution_count": 19,
@@ -365,45 +296,9 @@
    "execution_count": 20,
    "id": "overhead-oxygen",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.007308709900826216,\n",
-       " 0.007840313948690891,\n",
-       " 0.012577741406857967,\n",
-       " 0.016792016103863716,\n",
-       " 0.018380610272288322,\n",
-       " 0.02054666168987751,\n",
-       " 0.02238452434539795,\n",
-       " 0.022664234042167664,\n",
-       " 0.024170612916350365,\n",
-       " 0.02543029375374317,\n",
-       " 0.02622690051794052,\n",
-       " 0.027218176051974297,\n",
-       " 0.0277117732912302,\n",
-       " 0.03139013424515724,\n",
-       " 0.031627316027879715,\n",
-       " 0.031837183982133865,\n",
-       " 0.03363513574004173,\n",
-       " 0.03391077741980553,\n",
-       " 0.03537534177303314,\n",
-       " 0.03884335607290268,\n",
-       " 0.040437936782836914,\n",
-       " 0.04283299669623375,\n",
-       " 0.04534071311354637,\n",
-       " 0.04692922532558441,\n",
-       " 0.05191443860530853,\n",
-       " 0.0619671493768692]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "val_losses"
+    "#val_losses"
    ]
   },
   {
@@ -415,7 +310,7 @@
     {
      "data": {
       "text/plain": [
-       "0.030203625900097765"
+       "0.03288356870375943"
       ]
      },
      "execution_count": 21,
@@ -436,7 +331,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0277117732912302"
+       "0.0349186472594738"
       ]
      },
      "execution_count": 22,
@@ -450,8 +345,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "south-postage",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.007308712229132652"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min(val_losses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "proof-childhood",
    "metadata": {},
    "outputs": [],
    "source": []
