--- a/Code/DL Model based on statistics.ipynb
+++ b/Code/DL Model based on statistics.ipynb
@@ -47,7 +47,9 @@
     "#x_cols = ['P_VSA_MR_5', 'Mor04m', 'LUMO / eV']\n",
     "#x_cols = ['P_VSA_MR_5', 'Mor04m', 'E1p', 'Mor22s', 'LUMO / eV']\n",
     "#x_cols=['VE2_G/D', 'Eig14_EA(dm)', 'Mor31m', 'TDB04u', 'HATS1e']\n",
-    "x_cols=['VE2_G/D', 'Eig14_EA(dm)', 'Mor31m']\n",
+    "#x_cols=['VE2_G/D', 'Eig14_EA(dm)', 'Mor31m']\n",
+    "#x_cols = ['CATS2D_04_DP', 'CATS3D_02_AP', 'Eta_betaS', 'P_VSA_LogP_4', 'VE1_B(s)']\n",
+    "x_cols = ['B04[C-C]', 'CATS3D_03_DP', 'Eig11_AEA(ed)', 'J_RG', 'SpMAD_EA(ed)']\n",
     "X = data[x_cols]\n",
     "y = data[col_names[2]]"
    ]
@@ -101,7 +103,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense (Dense)                (None, 50)                200       \n",
+      "dense (Dense)                (None, 50)                300       \n",
       "_________________________________________________________________\n",
       "dense_1 (Dense)              (None, 20)                1020      \n",
       "_________________________________________________________________\n",
@@ -109,8 +111,8 @@
       "_________________________________________________________________\n",
       "dense_3 (Dense)              (None, 1)                 11        \n",
       "=================================================================\n",
-      "Total params: 1,441\n",
-      "Trainable params: 1,441\n",
+      "Total params: 1,541\n",
+      "Trainable params: 1,541\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -143,55 +145,55 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/25\n",
-      "2/2 [==============================] - 0s 39ms/step - loss: 0.4239 - val_loss: 0.3074\n",
+      "2/2 [==============================] - 0s 63ms/step - loss: 0.4397 - val_loss: 0.2111\n",
       "Epoch 2/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.1998 - val_loss: 0.1279\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.1650 - val_loss: 0.0298\n",
       "Epoch 3/25\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.0753 - val_loss: 0.1300\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0914 - val_loss: 0.0675\n",
       "Epoch 4/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.1262 - val_loss: 0.1325\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.1344 - val_loss: 0.0341\n",
       "Epoch 5/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.1128 - val_loss: 0.0981\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0804 - val_loss: 0.0292\n",
       "Epoch 6/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0710 - val_loss: 0.1011\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0660 - val_loss: 0.0585\n",
       "Epoch 7/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0684 - val_loss: 0.1193\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0805 - val_loss: 0.0707\n",
       "Epoch 8/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0853 - val_loss: 0.1260\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0861 - val_loss: 0.0571\n",
       "Epoch 9/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0888 - val_loss: 0.1127\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0728 - val_loss: 0.0309\n",
       "Epoch 10/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0775 - val_loss: 0.0902\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0579 - val_loss: 0.0144\n",
       "Epoch 11/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0653 - val_loss: 0.0765\n",
+      "2/2 [==============================] - 0s 16ms/step - loss: 0.0587 - val_loss: 0.0139\n",
       "Epoch 12/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0639 - val_loss: 0.0769\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0656 - val_loss: 0.0132\n",
       "Epoch 13/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0713 - val_loss: 0.0751\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0639 - val_loss: 0.0097\n",
       "Epoch 14/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0700 - val_loss: 0.0719\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0581 - val_loss: 0.0133\n",
       "Epoch 15/25\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.0630 - val_loss: 0.0724\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0533 - val_loss: 0.0192\n",
       "Epoch 16/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0630 - val_loss: 0.0738\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0558 - val_loss: 0.0216\n",
       "Epoch 17/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0636 - val_loss: 0.0713\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0551 - val_loss: 0.0166\n",
       "Epoch 18/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0632 - val_loss: 0.0660\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0523 - val_loss: 0.0111\n",
       "Epoch 19/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0622 - val_loss: 0.0609\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0519 - val_loss: 0.0078\n",
       "Epoch 20/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0613 - val_loss: 0.0604\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0522 - val_loss: 0.0072\n",
       "Epoch 21/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0616 - val_loss: 0.0575\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0520 - val_loss: 0.0076\n",
       "Epoch 22/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0609 - val_loss: 0.0566\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0504 - val_loss: 0.0098\n",
       "Epoch 23/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0606 - val_loss: 0.0573\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0506 - val_loss: 0.0133\n",
       "Epoch 24/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0609 - val_loss: 0.0575\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0504 - val_loss: 0.0137\n",
       "Epoch 25/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0609 - val_loss: 0.0576\n"
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0503 - val_loss: 0.0126\n"
      ]
     }
    ],
@@ -219,12 +221,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "true: 0.328, predicted: 0.730\n",
-      "true: 0.896, predicted: 0.638\n",
-      "true: 0.817, predicted: 0.728\n",
-      "true: 0.765, predicted: 0.639\n",
-      "true: 0.893, predicted: 0.607\n",
-      "true: 0.733, predicted: 0.623\n"
+      "true: 0.328, predicted: 0.397\n",
+      "true: 0.896, predicted: 0.752\n",
+      "true: 0.817, predicted: 0.616\n",
+      "true: 0.765, predicted: 0.704\n",
+      "true: 0.893, predicted: 0.820\n",
+      "true: 0.733, predicted: 0.710\n"
      ]
     }
    ],
@@ -269,12 +271,12 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.7302396 ],\n",
-       "       [0.63835657],\n",
-       "       [0.7284132 ],\n",
-       "       [0.6388422 ],\n",
-       "       [0.6073277 ],\n",
-       "       [0.62320495]], dtype=float32)"
+       "array([[-133.1519  ],\n",
+       "       [ -10.390106],\n",
+       "       [ -57.52736 ],\n",
+       "       [ -27.087143],\n",
+       "       [  13.000366],\n",
+       "       [ -25.128372]], dtype=float32)"
       ]
      },
      "execution_count": 14,
@@ -283,7 +285,7 @@
     }
    ],
    "source": [
-    "y_pred"
+    "y_pred*345-270"
    ]
   },
   {
