large RFE and changes to full model

--- a/Code/Full Model.ipynb
+++ b/Code/Full Model.ipynb
@@ -67,7 +67,8 @@
    "outputs": [],
    "source": [
     "model = keras.models.Sequential([\n",
-    "    keras.layers.Dense(100, activation='relu', input_shape=(X_train.shape[1],)),\n",
+    "    keras.layers.GaussianNoise(stddev=0.1, input_shape=(X_train.shape[1],)),\n",
+    "    keras.layers.Dense(100, activation='relu'),\n",
     "    keras.layers.Dense(50, activation='relu'),\n",
     "    keras.layers.Dense(10, activation='relu'),\n",
     "    keras.layers.Dense(1)\n",
@@ -88,6 +89,8 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
+      "gaussian_noise (GaussianNois (None, 1260)              0         \n",
+      "_________________________________________________________________\n",
       "dense (Dense)                (None, 100)               126100    \n",
       "_________________________________________________________________\n",
       "dense_1 (Dense)              (None, 50)                5050      \n",
@@ -130,55 +133,55 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/25\n",
-      "2/2 [==============================] - 0s 39ms/step - loss: 5.8340 - val_loss: 0.0376\n",
+      "2/2 [==============================] - 0s 40ms/step - loss: 4.5238 - val_loss: 0.3650\n",
       "Epoch 2/25\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.1942 - val_loss: 0.2854\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.2996 - val_loss: 0.1396\n",
       "Epoch 3/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.1909 - val_loss: 0.0606\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.1185 - val_loss: 0.1509\n",
       "Epoch 4/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.1459 - val_loss: 0.0874\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.1900 - val_loss: 0.0325\n",
       "Epoch 5/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0997 - val_loss: 0.0682\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0885 - val_loss: 0.1238\n",
       "Epoch 6/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.1033 - val_loss: 0.1147\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.1100 - val_loss: 0.0376\n",
       "Epoch 7/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.1008 - val_loss: 0.0312\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0934 - val_loss: 0.0312\n",
       "Epoch 8/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0760 - val_loss: 0.0606\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0586 - val_loss: 0.0577\n",
       "Epoch 9/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0746 - val_loss: 0.0349\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0783 - val_loss: 0.0216\n",
       "Epoch 10/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0670 - val_loss: 0.0520\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0434 - val_loss: 0.0589\n",
       "Epoch 11/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0568 - val_loss: 0.0334\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0647 - val_loss: 0.0206\n",
       "Epoch 12/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0519 - val_loss: 0.0418\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0519 - val_loss: 0.0379\n",
       "Epoch 13/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0502 - val_loss: 0.0279\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0508 - val_loss: 0.0305\n",
       "Epoch 14/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0497 - val_loss: 0.0292\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0436 - val_loss: 0.0340\n",
       "Epoch 15/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0399 - val_loss: 0.0381\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0397 - val_loss: 0.0258\n",
       "Epoch 16/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0427 - val_loss: 0.0287\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0445 - val_loss: 0.0260\n",
       "Epoch 17/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0336 - val_loss: 0.0254\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0433 - val_loss: 0.0366\n",
       "Epoch 18/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0380 - val_loss: 0.0226\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0439 - val_loss: 0.0261\n",
       "Epoch 19/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0349 - val_loss: 0.0343\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0411 - val_loss: 0.0211\n",
       "Epoch 20/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0329 - val_loss: 0.0213\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0359 - val_loss: 0.0259\n",
       "Epoch 21/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0318 - val_loss: 0.0217\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0282 - val_loss: 0.0163\n",
       "Epoch 22/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0295 - val_loss: 0.0297\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0291 - val_loss: 0.0205\n",
       "Epoch 23/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0299 - val_loss: 0.0245\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0291 - val_loss: 0.0128\n",
       "Epoch 24/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0256 - val_loss: 0.0189\n",
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0254 - val_loss: 0.0131\n",
       "Epoch 25/25\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.0292 - val_loss: 0.0185\n"
+      "2/2 [==============================] - 0s 4ms/step - loss: 0.0238 - val_loss: 0.0145\n"
      ]
     }
    ],
@@ -215,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "fifteen-interim",
    "metadata": {},
    "outputs": [
@@ -223,12 +226,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "true: 0.328, predicted: 0.623\n",
-      "true: 0.896, predicted: 0.772\n",
-      "true: 0.817, predicted: 0.807\n",
-      "true: 0.765, predicted: 0.696\n",
-      "true: 0.893, predicted: 0.957\n",
-      "true: 0.733, predicted: 0.726\n"
+      "true: 0.328, predicted: 0.592\n",
+      "true: 0.896, predicted: 0.811\n",
+      "true: 0.817, predicted: 0.846\n",
+      "true: 0.765, predicted: 0.728\n",
+      "true: 0.893, predicted: 0.978\n",
+      "true: 0.733, predicted: 0.751\n"
      ]
     }
    ],
@@ -240,28 +243,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "spatial-sewing",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0.62264574],\n",
-       "       [0.7720585 ],\n",
-       "       [0.8069314 ],\n",
-       "       [0.6956795 ],\n",
-       "       [0.9567511 ],\n",
-       "       [0.7264972 ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true: -157, predicted: -66\n",
+      "true: 39, predicted: 10\n",
+      "true: 12, predicted: 22\n",
+      "true: -6, predicted: -19\n",
+      "true: 38, predicted: 67\n",
+      "true: -17, predicted: -11\n"
+     ]
     }
    ],
    "source": [
-    "y_pred"
+    "for i in range(y_pred.shape[0]):\n",
+    "    print('true: {:.0f}, predicted: {:.0f}'.format(y_valid.iloc[i]*345-270, y_pred[i, 0]*345-270))"
    ]
   },
   {
